# linkweave

./: .aiignore  .gitignore  .vfox.toml  AGENTS.md  CHANGELOG.md  LICENSE  NOTICE  README.md  canvas.html  physics.html  pom.xml
.playwright-mcp/: bookmarks.html
api/: .env-template  chainlink-test.db  pom.xml
cli/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
desktop/: .gitignore  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ChainlinkFirstTechSpecForAgent.md  LinkWeaveFirstTechSpecForAgent.md  bookmark-import.md  browser-extension.md  cli-tool.md  desktop-app.md  entity_model.md  mobile-share.md  offlinemode.md  pwa-feasibility.md  requirements.md  ui-layout.md  use_cases.puml  vision.md
frontend/: .env.extension.development  .env.extension.production  .fallow-baseline.json  .fallowrc.json  .gitignore  .nycrc.json  .oxlintrc.json  .stylelintrc.json  .vfox.toml  Caddyfile  Dockerfile  README.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.extension.json  tsconfig.spec.json  vite.config.extension.ts  vite.config.ts
ollama/: Dockerfile  docker-compose.yml  entrypoint.sh
screenshot-service/: .dockerignore  Dockerfile  docker-compose.yml  package.json  server.js
scripts/: build-desktop.ps1  build-desktop.sh
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  (+1 more)
(+1240 files in other folders)
